--- a/server/backend/requirements.txt
+++ b/server/backend/requirements.txt
@@ -1,22 +1,29 @@
-# Core Django
-Django>=4.2,<5.0
-
-# Django REST Framework
-djangorestframework>=3.20
-
-# Authentication
-django-allauth>=0.58.0
-
-# Database (SQLite is default; PostgreSQL optional)
-psycopg2-binary>=2.9  # Only if using PostgreSQL
-
-# Environment variables
-python-dotenv>=1.1.0
-
-# CORS headers
-django-cors-headers>=4.0.0
-
-# Optional: for debugging
-djangorestframework-simplejwt>=6.0.0  # if using JWT auth
-
-q
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+colorama==0.4.6
+cors==1.0.1
+cryptography==45.0.6
+dj-rest-auth==7.0.1
+Django==5.2.5
+django-allauth==65.11.2
+django-cors-headers==4.7.0
+djangorestframework==3.16.1
+filelock==3.19.1
+future==1.0.0
+gevent==25.5.1
+greenlet==3.2.4
+idna==3.10
+jwt==1.4.0
+psycopg2-binary==2.9.11
+pycparser==2.22
+PySocks==1.7.1
+requests==2.32.5
+requests-file==2.1.0
+setuptools==80.9.0
+sqlparse==0.5.3
+tldextract==5.3.0
+urllib3==2.5.0
+zope.event==5.1.1
+zope.interface==7.2
